2010-08-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Document.m (-windowControllerDidLoadNib:):
	Enable the standard NSTextView find panel.
	Also enable smart insert and delete.

	* English.lproj/MainMenu.gorm:
	Add a Find menu.

2010-05-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* English.lproj/MainMenu.gorm:
	Add an Open Recent menu to the Document menu.
	Add a few more key equivalents and fix the key equivalents of the
	Larger and Smaller Font menu items (the latter was conflicting
	with the Save menu item).

2010-02-02  Gregory Casamento  <greg.casamento@gmail.com>

	* Ink_app.ico: Windows icon for Ink.
	* GNUmakefile: Modified to copy ico file into app wrapper.
	
2008-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* English.lproj/MainMenu.gorm: Use keyboard equivalents Cmd-z and
	Cmd-Z for undo and redo menu items.

2008-06-09  Fred Kiefer <FredKiefer@gmx.de>

	* English.lproj/MainMenu.gorm: Change action close: to performClose:
	
2007-10-01  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-textDidChange:): Only change update count if there
	is no undo manager. Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2007-02-05  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-windowControllerDidLoadNib:):
	Allow undo.
	* English.lproj/MainMenu.gorm: Converted to current Gorm format and add undo
	menu entries.
	
2005-10-14  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-windowControllerDidLoadNib:):
	Added a vertical ruler view.
	
2005-07-17  Adam Fedor  <fedor@gnu.org>

	* Convert Ink to use gorm files.
	* Document.m: Remove programmatic window creating. Add nib name.
	* GNUmakefile: Add gorm resource files.
	* main.m: Remove programmatic gui.
	* Readme.rtf: Update.
	* Document.gorm, English.lproj: New.
	(Patches from Rob Burns).

Mon Apr 28 13:22:49 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Document.m ([Document -makeWindow]): Do not make the document
	the window delegate.

2003-04-24  Adam Fedor  <fedor@gnu.org>

	* InkInfo.plist: Add new Icon images