@@ -1,0 +1,39 @@
+/* AppDelegate.h Application delegate for Ink application
+
+   Copyright (C) 2011 Free Software Foundation, Inc.
+
+   Author:  Wolfgang Lux <wolfgang.lux@gmail.com>
+   Date: 2011
+   
+   This file is part of GNUstep.
+   
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+   
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+   
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#import <Foundation/NSObject.h>
+
+@class NSString;
+@class NSPasteboard;
+
+@interface AppDelegate : NSObject { }
+
+- (void) openSelection:(NSPasteboard *)pasteboard
+	      userData:(NSString *)userData
+		 error:(NSString **)error;
+- (void) openFile:(NSPasteboard *)pasteboard
+	 userData:(NSString *)userData
+	    error:(NSString **)error;
+
+@end
