@@ -1,5 +1,12 @@
 {
     "## Comment" = "Do NOT change this file, Gorm maintains it";
+    AppDelegate = {
+	Actions = (
+	);
+	Outlets = (
+	);
+	Super = NSObject;
+    };
     Document = {
 	Actions = (
 	    "insertFile:"
